@@ -763,6 +763,9 @@
     [entry]
         name = "Tommy (yobbo)"
     [/entry]
+    [entry]
+        name = "Chris Hopman (cjhopman)"
+    [/entry]
 [/about]
 
 [about]
